--- a/lsp/src/assets/main.scss
+++ b/lsp/src/assets/main.scss
@@ -5,5 +5,6 @@
 @import url('https://use.fontawesome.com/releases/v5.5.0/css/all.css');
 
 @import "menu";
+@import "callouts";
 
 @import "wtfflorisstopputtingbackgroundsintocssfiles";
