--- a/lsp/src/assets/main.scss
+++ b/lsp/src/assets/main.scss
@@ -1,10 +1,45 @@
 @import "~bootstrap/scss/functions";
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:800');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:800');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,800');
 @import url('https://use.fontawesome.com/releases/v5.5.0/css/all.css');
 
 @import "menu";
 @import "callouts";
 
 @import "wtfflorisstopputtingbackgroundsintocssfiles";
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+
+#app {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+#lsp {
+  flex: 1 1 auto;
+  background-color: transparentize($mistserverdarkblue, .5);
+}
+
+h2 {
+  font-weight: 800;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+}
+
+#title {
+  h1 {
+    font-weight: 800;
+    font-family: 'Ubuntu', sans-serif;
+    color: $mistserverblue;
+  }
+}
+
+#menu {
+  font-family: 'Ubuntu', sans-serif;
+}
